Revision history for HTTP-Message

{{$NEXT}}

6.23      2020-05-07 17:57:18Z (TRIAL RELEASE)
    - Enable static install (GH#134) (Olaf Alders)
    - Support non-string header values that stringify (GH#137) (Will Storey)

6.22      2020-02-24 18:58:07Z
    - Full release.  No changes since TRIAL release 6.21

6.21      2020-02-19 14:35:09Z (TRIAL RELEASE)
    - Bump Encode to latest version (3.01) (GH#129) (Olaf Alders)
    - Revert #115 (GH#131) (Olaf Alders)
    - Revert (GH#125) "try hard to make a usable file name" (GH#130) (Olaf
      Alders)
    - Fix JSON request encoding examples in POD (GH#126) (Michael Schout)

6.20      2019-02-05 01:46:39Z (TRIAL RELEASE)
    - Fix encoded file names when LC_ALL=C (GH#125) (Lars Dɪᴇᴄᴋᴏᴡ 迪拉斯)

6.19      2019-01-16 15:17:35Z (TRIAL RELEASE)
    - Add support for RFC 8187 encoded filenames (GH#115) (Zaki Mughal)
    - Fix memoized _uri_canonical #121 (GH#123) (Dorian Taylor)
    - Don't overwrite $@ in decodable (gh #80) (GH#118) (mschae94)
    - Add support for RFC 8187 encoded filenames (GH#115) (Zaki Mughal)

6.18      2018-06-05 16:29:15Z
    - Revert status_message to original code (GH#111) (Theo van Hoesel)

6.17      2018-06-05 01:55:34Z
    - Documented status code 451 in the list of constants (GH #104) (Robert Rothenberg)
    - Status code 451 is cachable by default, as per RFC 7725 (GH #104) (Robert Rothenberg)
    - Add default status_message for unknown status codes (GH#105) (Robert Rothenberg)
    - Corrections to the documentation (GH#102) (Jonas B. Nielsen)

6.16      2018-03-28 14:09:17Z
    - Update status codes to official IANA list (GH#100) (Theo van Hoesel)

6.15      2018-03-13 13:02:56Z
    - Whenever possible, use an absolute four digit year for Time::Local (GH#97)
    - Add is_cacheable_by_default() (GH#98) (Theo van Hoesel)

6.14      2017-12-20 22:28:48Z
    - Add some useful examples in HTTP::Request (GH #92) (Chase Whitener).
      Batch requests are now explained.